[package]
name = "pallet-crowdfunding"
version = "0.1.0"
description = "Used to setup the state for a proposal to morph into a project."
authors = ['Imbue <https://github.com/ImbueNetwork>']
homepage = 'https://github.com/ImbueNetwork/imbue'
edition = "2021"
license = 'Apache 2.0'
publish = false
repository = 'https://github.com/ImbueNetwork/imbue'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.39", default-features = false }

common-types = { path = "../../libs/common-types", default-features = false }
pallet-proposals = { path= "../proposals", default-features = false}

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39"}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39"}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39"}
pallet-proposals = { path= "../proposals"}
common-types = { path = "../../libs/common-types"}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39"}
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39"}


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"pallet-proposals/std",
	"sp-core/std",
	"pallet-identity/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
