[package]
name = "pallet-crowdfunding"
version = "0.1.0"
description = "Used to setup the state for a proposal to morph into a project."
homepage = 'https://github.com/ImbueNetwork/imbue'
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false}
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false}
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }

common-types = { path = "../../libs/common-types", default-features = false }
common-runtime = { path = "../../runtime/common", default-features = false }
pallet-proposals = { path= "../proposals", default-features = false}
pallet-deposits = {path= "../deposits", default-features = false }


[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0"}
pallet-deposits = {path= "../deposits"}
pallet-proposals = { path= "../proposals"}
common-types = { path = "../../libs/common-types"}

[features]
default = [ "std" ]
std = [
	"codec/std",
	"common-runtime/std",
	"common-types/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"pallet-deposits/std",
	"pallet-identity/std",
	"pallet-proposals/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"common-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
]
try-runtime = [
	"common-runtime/try-runtime",
	"common-types/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-tokens/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-deposits/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-proposals/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-xcm/try-runtime",
	"sp-runtime/try-runtime",
]
