[package]
name = "pallet-deposits"
version = "4.0.0-dev"
description = "A very simple pallet used to deal with storage deposits of a type."
authors = ["Imbue Network"]
homepage = 'https://github.com/ImbueNetwork/imbue'
repository = "https://github.com/ImbueNetwork/imbue"
edition = "2021"
license = 'Apache 2.0'
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.42", default-features = false }
common-types = { path = "../../libs/common-types", default-features = false}
common-runtime = { path = "../../runtime/common", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.42"}
common-types = { path = "../../libs/common-types" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.42" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42"}
common-runtime = { path = "../../runtime/common"}

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"pallet-xcm/std",
	"common-runtime/std"
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "pallet-xcm/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]