[package]
name = "pallet-deposits"
version = "4.0.0-dev"
description = "A very simple pallet used to deal with storage deposits of a type."
homepage = 'https://github.com/ImbueNetwork/imbue'
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
common-types = { path = "../../libs/common-types", default-features = false}
common-runtime = { path = "../../runtime/common", default-features = false}


[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0"}
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }
common-types = { path = "../../libs/common-types" }
common-runtime = { path = "../../runtime/common"}

[features]
default = [ "std" ]
std = [
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"common-types/std",
	"common-runtime/std",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"common-runtime/runtime-benchmarks",
]
try-runtime = [
	"common-runtime/try-runtime",
	"common-types/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-tokens/try-runtime",
	"sp-runtime/try-runtime",
]
