[package]
name = "pallet-dispute"
authors = ['Imbue <https://github.com/ImbueNetwork>']
version = '1.0.0'
license = 'Apache 2.0'
homepage = 'https://substrate.dev'
repository = "https://github.com/ImbueNetwork/imbue"
edition = '2018'
resolver = "2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, path = "../../../../frame/benchmarking" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../../../frame/support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../../../frame/system" }

[dev-dependencies]
sp-core = { version = "7.0.0", default-features = false, path = "../../../../primitives/core" }
sp-io = { version = "7.0.0", default-features = false, path = "../../../../primitives/io" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../../../primitives/runtime" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
