[package]
name = "pallet-fellowship"
version = "0.1.0"
description = "Used to map the accounts to a fellowship role. Encompasses all the functionality associated with fellowship decisions."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
license = 'Apache 2.0'
homepage = 'https://github.com/ImbueNetwork/imbue'
repository = "https://github.com/ImbueNetwork/imbue"
edition = '2018'
resolver = "2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.0.0", default-features = false }
common-types = { path = "../../libs/common-types", default-features = false}
common-traits = { path = "../../libs/common-traits", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0"}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0"}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0"}
common-types = { path = "../../libs/common-types"}
common-traits = { path = "../../libs/common-traits"}
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.0.0"}
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.0.0"}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0"}
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0"}

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
