[package]
name = "pallet-fellowship"
description = "Used to map the accounts to a fellowship role. Encompasses all the functionality associated with fellowship decisions."
version = "0.1.0"
homepage = 'https://github.com/ImbueNetwork/imbue'
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
hex-literal = {version = "0.3.4", default-features = false}
serde = { version = "1.0.101", features = ["derive"], default-features = false }
log = { version = "0.4.17", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false}
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
common-types = { path = "../../libs/common-types", default-features = false}
common-traits = { path = "../../libs/common-traits", default-features = false }

[dev-dependencies]
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0"}
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0"}

common-types = { path = "../../libs/common-types"}
common-traits = { path = "../../libs/common-traits"}

[features]
default = [ "std" ]
std = [
	"codec/std",
	"log/std",
	"common-traits/std",
	"common-types/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"scale-info/std",
	"serde/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks" ]

try-runtime = [
	"common-traits/try-runtime",
	"common-types/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-tokens/try-runtime",
	"sp-runtime/try-runtime",
]
