[package]
name = "pallet-grants"
version = "0.1.0"
description = "The pallet that sets up a milestone based project in a grant like style."
authors = ["Imbue Network"]
homepage = 'https://github.com/ImbueNetwork/imbue'
repository = "https://github.com/ImbueNetwork/imbue"
edition = "2021"
license = 'Apache 2.0'
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-proposals = { path = "../proposals", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }

# Local
common-traits = { path = "../../libs/common-traits", default-features = false }
common-types = { path = "../../libs/common-types", default-features = false }
pallet-deposits = { path = "../deposits", default-features = false }

[dev-dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.39" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-proposals = { path = "../proposals" }
common-types = { path = "../../libs/common-types" }
common-runtime = { path = "../../runtime/common" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39"}

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"orml-tokens/std",
	"pallet-timestamp/std",
	"pallet-identity/std",
	"pallet-balances/std",
	"pallet-proposals/std",
	"pallet-xcm/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
